# fishmlserv

./: .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml  r.txt  requirements.txt
key/: ml7.pem
note/: Untitled.ipynb  Untitled1.ipynb
src/fishmlserv/: .main.py.swp  curl.py  main.py  prd_start.py  prediction.py
tests/: test_curl.py
